WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55417
RunLoop::Timer fires 1000x too early on Windows
https://bugs.webkit.org/show_bug.cgi?id=55417
Summary
RunLoop::Timer fires 1000x too early on Windows
Adam Roben (:aroben)
Reported
2011-02-28 15:18:51 PST
RunLoop::Timer fires 1000x too early on Windows. We're making a seconds vs. milliseconds conversion error. Right now this only affects the responsiveness timer (all other timers are 0-delay).
Attachments
Convert seconds to milliseconds before calling ::SetTimer
(17.91 KB, patch)
2011-03-01 07:25 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-02-28 15:20:07 PST
This is blocking
bug 51262
, which wants to add a new non-0-delay timer.
Adam Roben (:aroben)
Comment 2
2011-02-28 15:20:39 PST
<
rdar://problem/9065287
>
Adam Roben (:aroben)
Comment 3
2011-03-01 07:25:38 PST
Created
attachment 84228
[details]
Convert seconds to milliseconds before calling ::SetTimer
Adam Roben (:aroben)
Comment 4
2011-03-01 07:30:27 PST
Committed
r80001
: <
http://trac.webkit.org/changeset/80001
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug