Convert seconds to milliseconds before calling ::SetTimer

Fixes <http://webkit.org/b/55417> <rdar://problem/9065287> RunLoop::Timer fires 1000x too
early on Windows

Reviewed by Anders Carlsson.

Source/WebKit2:

* Platform/win/RunLoopWin.cpp:
(RunLoop::TimerBase::start): Convert the timeout interval to milliseconds, since that's what
::SetTimer expects.

Tools:

Test that the WebKit2 responsiveness timer doesn't fire too early

* TestWebKitAPI/PlatformUtilities.h: Added sleep().

* TestWebKitAPI/Tests/WebKit2/ResponsivenessTimerDoesntFireEarly.cpp: Added.
(TestWebKitAPI::didReceiveMessageFromInjectedBundle):
(TestWebKitAPI::didFinishLoadForFrame):
(TestWebKitAPI::processDidBecomeUnresponsive):
(TestWebKitAPI::setInjectedBundleClient):
(TestWebKitAPI::setPageLoaderClient):
Simple helper functions.

(TestWebKitAPI::TEST): Load an HTML file to make sure the web process is initialized. Then
tell the web process to pause and press the spacebar key. The spacebar keypress should cause
the responsiveness timer to start, but the web process should unpause before it has a chance
to fire. Run until the web process has unpaused, and assert that the timer didn't fire.

* TestWebKitAPI/Tests/WebKit2/ResponsivenessTimerDoesntFireEarly_Bundle.cpp: Added.
(TestWebKitAPI::ResponsivenessTimerDoesntFireEarlyTest::ResponsivenessTimerDoesntFireEarlyTest):
Call up to the base class.
(TestWebKitAPI::ResponsivenessTimerDoesntFireEarlyTest::didReceiveMessage): When asked to
pause, sleep for 0.5 seconds, then send back a message saying we paused.

* TestWebKitAPI/mac/PlatformUtilitiesMac.mm:
(TestWebKitAPI::Util::sleep): Added. Calls through to usleep.
* TestWebKitAPI/win/PlatformUtilitiesWin.cpp:
(TestWebKitAPI::Util::sleep): Added. Calls through to ::Sleep.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/win/TestWebKitAPI.vcproj:
* TestWebKitAPI/win/TestWebKitAPIInjectedBundle.vcproj:
Added new files.

Canonical link: https://commits.webkit.org/69898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80001 268f45cc-cd09-0410-ab3c-d52691b4dbfc